fixed vertical spacing of table

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,6 +74,9 @@ hr {
   table {
     font-size: 1.5em;
     border: 2px solid $gray-dark;
+    td:nth-child(1), td:nth-child(2) {  
+      padding-top: 12px;
+    }
     a {
       text-decoration: none;
     }
